get wiki element
